--- a/src/main/resources/templates/shiro/login.html
+++ b/src/main/resources/templates/shiro/login.html
@@ -17,6 +17,8 @@
 		<p>
 			<input type="submit" value="登录" />
 		</p>
+		<p><input type="checkbox" name="rememberMe" />记住我</p>
 	</form>
+	
 </body>
 </html>
